<resources>
    <string name="app_name">Delivery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_fruits">Fruits</string>
    <string name="menu_vegetables">Vegetables</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_title">Communicate</string>
    <string name="test1">Communicate</string>
</resources>
