<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fruits"
            android:icon="@drawable/basket"
            android:title="@string/menu_fruits" />
        <item
            android:id="@+id/nav_vegetables"
            android:icon="@drawable/vegetables"
            android:title="@string/menu_vegetables" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/menu_my_orders" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="@string/menu_title">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/contact"
                android:title="@string/menu_contact_us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about_us" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate"
                android:title="@string/menu_rate_us" />
        </menu>
    </item>

</menu>
